Extend sample validator

--- a/examples/xml/Makefile
+++ b/examples/xml/Makefile
@@ -7,8 +7,9 @@ dev: .venv
 	.venv/bin/pip install ruff
 		
 lint:
-	. .venv/bin/activate && ruff format xml-validate
+	. .venv/bin/activate && ruff format xml-validate validation_error/* xml_validator/*
 
 .PHONY: test
 test:
+	pytest
 	./test.sh
