--- a/examples/xml/Makefile
+++ b/examples/xml/Makefile
@@ -4,7 +4,7 @@ default: .venv
 	.venv/bin/pip install -r requirements.txt
 
 dev: .venv
-	.venv/bin/pip install ruff
+	.venv/bin/pip install ruff pytest
 		
 lint:
 	. .venv/bin/activate && ruff format xml-validate validation_error/* xml_validator/*
